@@ -1,3 +1,8 @@
+2005-07-09  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimplayer.c: removed if(image) checks where the image
+	can't be NULL.
+
 2005-07-09  Sven Neumann  <sven@gimp.org>
 
 	* app/base/pixel-surround.[ch]: formatting.
